--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
 	
 <div id="navdiv">
 	<a href="index.html">Home</a> | 
-	<a href="Aboutmenot.html">About Me</a> | 
-	<a href="favoritethings.html">Favorite Things</a> | 
+	<a href="aboutme.html">About Me</a> | 
+	<a href="favoritethings67.html">Favorite Things</a> | 
 	<a href="contactme.html">Contact Me</a></div>
 	
 <div id="grablediv"><img src="My first site 5th/ElCamino.png" width="200" alt="" style="float: left; margin-right: 15px; margin-bottom: 15px;"/>
   <h1>Welcome to my website!</h1>
   <p data-start="140" data-end="514">Hi, my name is Anthony Lee, and I’m a 10th grade student at El Camino. I’m passionate about Graphic Design and enjoy working on creative projects through WordPress. Outside of school, I spend a lot of time with my dog, Weird Chuwawa, who’s always keeping life interesting. I also enjoy staying active with hobbies like baseball, golfing, e-biking, hiking, swimming, and riding my boogie board. Music is another big part of my life it inspires me and helps me stay focused. As a student, I’m always exploring new ways to learn, grow, and express myself through design, creativity, and everyday adventures.</p>
 <p>This is my first time in Web design and my 2nd year in Graphic</p>
+		<p data-start="140" data-end="514"> The home page of my website is built using proper HTML structure with a header, navigation bar, main content area, and footer. At the top, the header contains the site title, and the navigation provides links to other pages such as “About,” “Favorite Things,” and “Contact.” The main section includes a hero area built with "div" elements, featuring a large title, an introductory paragraph, and an image with descriptive alt text. The page also demonstrates a simple two-column layout, with the hero text floated next to the image. This design helps organize the content in a clean and professional way while practicing the use of floats, margins, and padding for spacing. To style the page, embedded CSS is written inside the "style" tags in the "head" section. The CSS sets consistent body fonts and background colors, applies margins and padding to separate content, and adds hover effects for the navigation links. Below the hero section, the layout includes three distinct columns, each with a title, short description, image, and a link to its respective page. This section uses CSS to space the columns evenly and highlight them when hovered over. Overall, the page demonstrates the basics of structure, layout, and styling in Dreamweaver using HTML and CSS.</p>
 </div>
 	<div style="clear: both;"></div>
 	
     <div class="threecolumns">
       <h3>About Me</h3>
       <p>My name is Anthony Lee and I am a Web/Graphic designer based in Oceanside, CA. I also enjoy watching and playing baseball. I am also a experence person in Graphic Design&nbsp;</p>
-      <p><a href="Aboutmenot.html">Read more...</a></p>
+      <p><a href="aboutme.html">Read more...</a></p>
     </div>
 <div class="threecolumns">
   <h3>Favorite Things</h3>
   <p>I really enjoy spending time with my friends, hanging out outside in nature, and also playing for the El Camino baseball team. If I could find a way to somehow combine those three, that would be heaven.</p>
-  <p><a href="favoritethings.html">Read more...</a></p>
+  <p><a href="favoritethings67.html">Read more...</a></p>
 </div>
 <div class="threecolumns">
   <h3>Contact Me</h3>
