--- a/aboutme.html
+++ b/aboutme.html
@@ -1,26 +1,29 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
 
 </style>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
-
 </head>
 <body>
-<div id="headerdiv">Anthony Lee's First Website</div>
-	
 <div id="navdiv">
-	<a href="index.html">Home</a> | 
+	<div id="headerdiv">Heres a little MORE about me </div>
+  <a href="index.html">Home</a> | 
 	<a href="aboutme.html">About Me</a> | 
 	<a href="favoritethings.html">Favorite Things</a> | 
 	<a href="contactme.html">Contact Me</a></div>
 	
-<div id="grablediv"><img src="My first site 5th/ElCamino.png" width="200" alt="" style="float: left; margin-right: 15px; margin-bottom: 15px;"/>
-  <h1>Welcome to my about page!</h1>
-  <p data-start="140" data-end="514">Hi, my name is Anthony Lee, and I’m a 10th grade student at El Camino. I’m passionate about Graphic Design and enjoy working on creative projects through WordPress. Outside of school, I spend a lot of time with my dog, Weird Chuwawa, who’s always keeping life interesting. I also enjoy staying active with hobbies like baseball, golfing, e-biking, hiking, swimming, and riding my boogie board. Music is another big part of my life it inspires me and helps me stay focused. As a student, I’m always exploring new ways to learn, grow, and express myself through design, creativity, and everyday adventures.</p>
-<p>This is my first time in Web design and my 2nd year in Graphic</p>
-</div>
+<img src="Kershaw2015.jpg" alt="My Image" style="width:150px; margin-right:15px; float:left;">
+<p></p>
+<p data-start="140" data-end="514">My name is Anthony, and I am someone who enjoys a mix of creativity, sports, and spending time with the people who matter most. Baseball has always been one of my favorite activities, both to play and to watch. I especially enjoy following the Dodgers, and watching their games each night has become part of my routine. Baseball has taught me a lot about discipline, teamwork, and staying focused, which are qualities I try to carry into my everyday life.&nbsp;</p>
+<p data-start="140" data-end="514">&nbsp;The beach is another place I really enjoy. It gives me a chance to relax, clear my mind, and appreciate the beauty of the outdoors. Whether it is walking along the sand, spending time in the water, or just sitting and listening to the waves, the beach is a place where I can recharge and feel at peace. I like that it balances out the busier parts of my life with calm moments of reflection. <img src="Xbox Serise X.jpg" alt="" width="200" style="float:right;"> Another big interest of mine is graphic design.&nbsp;</p>
+<p data-start="140" data-end="514">I enjoy using creativity to turn ideas into visuals, and design gives me a way to express myself while building new skills. It combines art and technology in a way that challenges me to think differently and find unique solutions. Graphic design is something I hope to continue improving in, since it is both fun and rewarding to see my work come together. <img src="SPR-without-people.jpg" alt="" width="200" style="float: left; margin-right:15px;"> Spending time with friends is also very important to me.&nbsp;</p>
+<p data-start="140" data-end="514">I enjoy hanging out, laughing, and making memories with the people I am closest to. Whether we are talking, playing games, or going places together, I value those moments because they remind me how important friendships are. They bring balance to my life and give me experiences that I know I will always remember. <img src="Beachphoto.jpg" alt="Beach" width="300" height="300" style="float: right;"></p>
+<p data-start="140" data-end="514"> Finally, video games are another hobby that I enjoy. They give me a chance to relax and have fun, while also challenging me to think strategically and improve my skills.&nbsp;</p>
+<p data-start="140" data-end="514">Playing games is not only entertaining but also a way to connect with others who share the same interests. Altogether, my love for baseball, the beach, graphic design, spending time with friends, and playing video games show the different sides of who I am and the things that make me happiest.&nbsp;</p>
+The About page introduces who I am and highlights some of my personal interests and creative skills. In two to three short paragraphs, I describe my hobbies, such as playing sports, enjoying time at the beach, and hanging out with friends, along with my interest in video games and music. I also explain my growing knowledge of web design and graphic design, showing how I use creativity and design skills to bring personality into my projects. Each paragraph is styled with a slightly different background color in the CSS to make the page visually appealing while keeping the layout subtle and professional. This page also demonstrates how to embed and style multimedia. A YouTube video is inserted using an "iframe" so visitors can view content directly from the page. The navigation bar uses styled buttons with CSS that include padding, rounded corners, and hover effects, making the site feel interactive. Images on the page are also styled with borders and drop shadows to stand out while maintaining a clean look. To connect with my interests, I’ve added at least one external link that opens in a new tab, leading to a site related to design inspiration or another hobby. Altogether, this About page blends text, media, and style to showcase who I am in both a creative and technical way.
+<p>This is my first time in Web design and my 2nd year in Graphic!</p>
 	<h2>My Journey</h2>
 <table border="1" cellpadding="10">
   <tr>
@@ -29,7 +32,7 @@
   </tr>
   <tr>
     <td>2024</td>
-    <td>Started Graphic Design classe at school.</td>
+    <td>Started a Graphic Design class at school.</td>
   </tr>
   <tr>
     <td>2024</td>
@@ -39,22 +42,17 @@
     <td>2025</td>
     <td>Building my first personal website (this one!).</td>
   </tr>
-</table><h2>My Skills</h2>
-<p>Graphic Design</p>
-<div style="background:#ddd; width:100%; border-radius:20px;">
-  <div style="width:85%; background:#007BFF; padding:10px; color:white; border-radius:20px;">85%</div>
-</div>
+</table>
 
-<p>Baseball</p>
-<div style="background:#ddd; width:100%; border-radius:20px;">
-  <div style="width:95%; background:#28a745; padding:10px; color:white; border-radius:20px;">95%</div>
-</div>
+	
+	
+
 <div style="clear: both;"></div>
 	
     <div class="threecolumns">
       <h3>Home</h3>
-      <p>My name is Anthony Lee and I am a Web/Graphic designer based in Oceanside, CA. I also enjoy watching and playing baseball. I am also a experence person in Graphic Design and this will give you some of the projects i did&nbsp;&nbsp;</p>
-      <p><a href="aboutme.html">Read more...</a></p>
+      <p>My name is Anthony Lee and I am a Web/Graphic designer based in Oceanside, CA. I also enjoy watching and playing baseball. I am also a experence person in Graphic Design.</p>
+      <p><a href="Myfirstwebsite.html">Read more...</a></p>
     </div>
 <div class="threecolumns">
   <h3>Favorite Things</h3>
